--- a/src/pages/my-teams/my-teams.html
+++ b/src/pages/my-teams/my-teams.html
@@ -6,13 +6,13 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Elite Schedule</ion-title>
   </ion-navbar>
-  <ion-toolbar secondary>
+  <ion-toolbar color="secondary">
     <ion-title>My Teams</ion-title>
   </ion-toolbar>
 
