--- a/src/pages/standing/standing.html
+++ b/src/pages/standing/standing.html
@@ -1,18 +1,18 @@
 <!--
-  Generated template for the TeamDetail page.
+  Generated template for the Standing page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
-    <ion-title>{{ team.name }}</ion-title>
+  <ion-navbar>
+    <ion-title>standing</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <h2>Team Detail page</h2>
+  <h2>Standings page</h2>
 </ion-content>
